# learn-language-server

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  Makefile.prod  alembic.ini  docker-compose.monitor.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py  seed.py
app/api/: main.py
app/api/routes/: categories.py  definitions.py  levels.py  meanings.py  users.py
app/constants/: common.py  data.py  definition.py  definition_group.py  interface_language.py  issue_status.py  issue_type.py  language.py  question_type.py  score.py  target_language.py  translate.py
app/core/: base.py  config.py  db.py  dependencies.py  security.py
app/core/dependencies/: admin.py  auth.py  client.py  common.py  service_factories.py
app/crud/: category.py  definition.py  level.py  meaning.py  user.py
app/crud/admin/: __init__.py  audio.py  category.py  category_progress_info.py  definition.py  definition_progress_info.py  image.py  image_definition.py  issue.py  level.py  meaning.py  meaning_progress_info.py  question_type.py  text_definition.py  user_info.py
app/crud/client/: __init__.py  category.py  issue.py  level.py  meaning.py  question.py  settings.py
app/crud/common/: __init__.py  definition.py  issue_status.py  issue_type.py  meaning_progress_info.py  translation.py  user.py
app/db/migrations/: env.py
app/db/seed/: __init__.py  seed_categories.py  seed_definitions.py  seed_issue_statuses.py  seed_issue_types.py  seed_levels.py  seed_meanings.py  seed_users.py  seet_question_types.py
app/models/: __init__.py  associations.py  category.py  definition.py  level.py  meaning.py  user.py
app/models/common/: __init__.py  asset.py  associations.py  audio_asset.py  category.py  category_progress_info.py  definition.py  definition_progress_info.py  image_asset.py  image_definition.py  issue.py  issue_status.py  issue_type.py  level.py  meaning.py  meaning_progress_info.py  question.py  question_type.py  text_definition.py  translation.py  user.py  user_info.py
app/schemas/: __init__.py  base.py  category.py  common.py  definition.py  level.py  meaning.py  user.py
app/schemas/admin/: __init__.py  category.py  category_progress_info.py  definition.py  definition_progress_info.py  image.py  image_definition.py  issue.py  level.py  meaning.py  tts.py  (+5 more)
app/scripts/: backfill_audio_for_meanings.py  merge_jsons.py  translate_definitions.py
app/services/: category.py  definition.py  level.py  meaning.py  user.py
app/utils/: __init__.py  cookies.py  generate_audio.py  image.py  string.py  tts.py  url_generator.py
nginx/conf.d/: base.conf  prod.conf  prod_future.conf
postgres_data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres_data/pg_stat/: pgstat.stat
postgres_data/pg_xact/: 0000
scripts/: renew_certs.sh  reset_db.sql
(+254 files in other folders)
